--- a/style.css
+++ b/style.css
@@ -36,13 +36,12 @@ header {
         font-size: 87.5%;
     }
 
-    #mockup {
+    .mockup {
         width: 100%;
-        height: auto;
-        display: grid;
+        display: flex;
         justify-content: center;
-        grid-template-columns: repeat(1fr, 1fr);
-        gap: 2rem;
+        flex-direction: column;
+        align-content: space-around;
     }
     .bloco2 {
     width: 80%;
